tests/diagnostics/semantic_unknown_function.mtc
int y = missing_fn(1)
